--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,18 +45,16 @@ body {
 }
 
 .container {
-	max-width: 1000px;
+	max-width: 700px;
 	padding: 50px 20px;
 	margin-left: auto;
 	margin-right: auto;
 }
-
+header {
+	margin-bottom: 24px;
+}
 footer {
 	margin-top: 50px;
-}
-.copy-width {
-	max-width: 700px;
-	margin: auto;
 }
 
 figure {
